# ts2g2

./: .gitignore  README.md  draft-implementations.ipynb  main.py  mkdocs.yml  pyproject.toml  pyptoject.toml  read-time-series-and-create-graph.ipynb  requirements.txt
.github/workflows/: python-package.yml
core/: model.py
generation/: strategies.py
input/: timeseries.py
tests/: test_angle_visibility_strategy.py  test_horizontal_visibility_strategy.py  test_natural_visibility_strategy.py  test_ordinal_partition.py  test_quantiles.py  test_timeseries_strategies.py
tests/input/: timeseries.py
timeseries/: ordinal_partition.py  quantiles.py  strategies.py  vectors.py
tutorials/: Demo.ipynb  README.md  code_implementation.py  demo-amazon-stocks.ipynb  demo-ts2g2.ipynb  deprecated-test_code.ipynb  newtest.py  ordinal_partition_strategy.ipynb  oscillation.py  poskus.py  quantile_strategy.ipynb  requirements.txt  review-beta-testing-notebook.ipynb  review-demo-amazon-stocks.ipynb  test.py  test_code.ipynb  tutorial-01-introduction-to-ts2g2.ipynb  tutorial-ts2g-comparing-ts-and-graph-embeddings.ipynb  tutorial-ts2g-strategies-ordinal-partition-networks.ipynb  tutorial-ts2g-strategies-quantile-networks.ipynb  vectors-amazon-stocks.ipynb
tutorials/amazon/: AMZN.csv
tutorials/apple/: APPLE.csv
